<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Busme</string>
    <string name="authenticator_service">android.accounts.AccountAuthenticator</string>
    <string
        name="notification_login_error">Touch to sign into your Busme account.</string>

    <!-- Title string for Login activity-->
    <string
        name="ui_activity_title">Sign-in</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string
        name="ui_activity_authenticating">Authenticating\u2026</string>

    <!-- AuthenticatorActivity -->
    <skip />
    <!-- Label above username EditText -->
    <string
        name="login_activity_message_add_account">Busme Add Account</string>
    
    <string
        name="login_activity_username_label">Email</string>
    <!-- Label above password EditText -->
    <string
        name="login_activity_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string
        name="login_activity_perform_button_signin">Sign in</string>
    <string
        name="login_activity_cancel_button">Cancel</string>

    <!-- Message shown in dialog if the username or password is invalid. -->
    <string
        name="login_activity_loginfail_cancel">Your login for Busme was canceled. </string>
    <string
        name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Busme account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string
        name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string
        name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string
        name="login_activity_newaccount_text">Sign in to your Busme account. </string>

    <!-- Button that takes the user to the "sign in" screen -->
    <string
        name="sign_in_button_label">Sign in</string>
    <!-- Button for going to the previous screen or step -->
    <string
        name="back_button_label">Back</string>
    <!-- Button to cancel the current operation -->
    <string
        name="cancel_button_label">Cancel</string>
    <string
        name="authenticator_label">BusmeAuth</string>
    <string name="municipality_spinner_label">Municipality</string>
    <string name="login_activity_perform_button_add">Add Account</string>
    <string name="login_activity_perform_button_update">Update Account</string>
    <string name="login_acitivity_bottom_message_instructions">Please select your Municipality for which you have an account.</string>
    <string name="check_activity_header_message">Checking Login Credentials</string>
    <string name="check_activity_cancel_button">Cancel</string>
    <string name="check_activity_account_not_found_message">Account Not Found</string>
</resources>
