<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2010, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/messageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/municipalitySpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/municipality_spinner_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/municipalitySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_username_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/login_activity_password_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:capitalize="none"
                android:inputType="textPassword"
                android:minWidth="250dip"
                android:password="true"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="" />

            <LinearLayout
                android:id="@+id/buttons_center_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center" >

                <RelativeLayout
                    android:id="@+id/buttonsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/performButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_activity_perform_button_add" />

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/performButton"
                        android:text="@string/login_activity_cancel_button" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/message_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>